# GithubAquarium_Back

./: .gitignore  README.md  assign_fish_species.py  manage.py  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: -feature-fix-style-.md
.github/workflows/: DeployBack.yml  DiscordNotify.yml
GithubAquarium/: asgi.py  settings.py  urls.py  views.py  webhook_views.py  wsgi.py
apps/aquatics/: admin.py  apps.py  logic.py  models.py  renderers.py  serializers.py  serializers_aquarium.py  serializers_fishtank.py  tasks.py  urls.py  views.py  views_aquarium.py  views_fishtank.py  views_render.py
apps/aquatics/migrations/: 0001_initial.py  0002_initial.py  0002_remove_contributionfish_is_visible_and_more.py
apps/aquatics/renderer/: sprite.py  tank.py  utils.py
apps/items/: admin.py  models.py
apps/items/migrations/: 0001_initial.py  0002_remove_background_svg_template_and_more.py  0003_item.py
apps/manager/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
apps/manager/migrations/: 0001_initial.py  0005_svgasset_maturity.py  (+3 more)
apps/repositories/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/shop/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/: adapter.py  admin.py  models.py  serializers.py  tasks.py  urls.py
github/: models.py
github/migrations/: 0001_initial.py  0002_initial.py
logs/: django.log.2025-10-28
shop/: models.py
shop/migrations/: 0001_initial.py
tanks/: models.py
tanks/migrations/: 0001_initial.py  0002_initial.py
users/: models.py
users/migrations/: 0001_initial.py
(+8 files in other folders)
