[project]
name = "githubaquarium-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth[with-social]>=6.0.0",
    "django-allauth[socialaccount]<0.61.0",
    "django-cors-headers>=4.8.0",
    "django-environ>=0.12.0",
    "Django>=4.2,<5.0",
    "django-q>=1.3.9",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.11",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "pygithub>=2.8.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "pydotplus>=2.0.2",
    "ruff>=0.13.0",
]
